--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h1>This is dummy text </h1>
+    <h2>Excited to learn git and github </h2>
+    <h3>This is a new line</h3>
 </body>
 </html>
