Added new text to html

--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
 </head>
 <body>
 
-    <h2> Learning git is fun!</h2>
 
 
-    <h2>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+    <h2>Lorem, ipsum dolor sit amet. 
         Dolorum a accusamus neque dignissimos iste enim magnam ullam quo sapiente nihil?</h2>
+
+        <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam, incidunt.</h4>
+        <h5>Learning Git is a lifestyle. </h5>
+        <h5>Hooray!</h5>
 </body>
 </html>
