--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
 <body>
 
 
-
-    <h2>Lorem, ipsum dolor sit amet. 
-        Dolorum a accusamus neque dignissimos iste enim magnam ullam quo sapiente nihil?</h2>
+    <h1> Starting Git & Github</h1>
+    <h2>Lets Begin!</h2>
 
         <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam, incidunt.</h4>
         <h5>Learning Git is a lifestyle. </h5>
