Learning git diff

--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Lorem ipsum dolor sit amet.</h1>
 
-
-    <h1> Starting Git & Github</h1>
     <h2>Lets Begin!</h2>
 
         <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam, incidunt.</h4>
