Checked with revert going to use later with commits

--- a/index.html
+++ b/index.html
@@ -3,20 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
+    <h1>Lorem ipsum dolor sit amet.</h1>
 
-    <h2>Lets Git Started in here!</h2>
+    <h2>Lets Begin!</h2>
 
         <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam, incidunt.</h4>
-        <h6> Hooray GIT DIFF GIT ADD GIT COMMIT </h6>
         <h5>Learning Git is a lifestyle. </h5>
-        <h2>ad8f59f05263d29d61e361790804aa49ba0919fb</h2>
-        <h2>120b8f7632b2d8aed436b601cedf4446845c15b5</h2>
-        <h1>Hoorah</h1>
-        <h2>Yes</h2>
-        <h3>This is dummy text </h3>
-    </body>
+        <h5>Hooray!</h5>
+</body>
 </html>
