--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 
         <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam, incidunt.</h4>
         <h5>Learning Git is a lifestyle. </h5>
-        <h5>Hooray!</h5>
-</body>
+
+
+        <h1>Hoorah</h1>
+        <h2>Yes</h2>
+        <h3>This is dummy text </h3>
+    </body>
 </html>
