--- a/index.html
+++ b/index.html
@@ -17,5 +17,11 @@
         <h1>Hoorah</h1>
         <h2>Yes</h2>
         <h3>This is dummy text </h3>
+
+
+        <h2> Happy coding </h2>
+        <h3> Learning GIt is neccessary </h3>
+        <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            Veniam autem alias ipsam officia earum incidunt?</h4>
     </body>
 </html>
