Just did reverting now merging on with feature and dev branch

--- a/index.html
+++ b/index.html
@@ -23,5 +23,6 @@
         <h3> Learning GIt is neccessary </h3>
         <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
             Veniam autem alias ipsam officia earum incidunt?</h4>
+            <h5> Just did reverting now it's merging on the feature and dev branch! </h5>
     </body>
 </html>
