--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h1>Hoorah</h1>
         <h2>Yes</h2>
         <h3>This is dummy text </h3>
-
+        <h4> Justed added a gitignore to the script.js file </h4>
 
         <h3> Learning GIt is neccessary </h3>
         <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
