Supposed to ignore the script.js

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <h2>Yes</h2>
         <h3>This is dummy text </h3>
         <h4> Justed added a gitignore to the script.js file </h4>
-
+        <h2> Just added the gitignore the to the script.js</h2>
         <h3> Learning GIt is neccessary </h3>
         <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
             Veniam autem alias ipsam officia earum incidunt?</h4>
