--- a/index.html
+++ b/index.html
@@ -24,5 +24,6 @@
         <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
             Veniam autem alias ipsam officia earum incidunt?</h4>
             <h5> Just did reverting now it's merging on the feature and dev branch! </h5>
+            <h1>Testing if it works </h1>
     </body>
 </html>
