--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
         <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam, incidunt.</h4>
         <h5>Learning Git is a lifestyle. </h5>
-
+        <h3> Git ignore works now  </h3>
 
         <h1>Hoorah</h1>
         <h2>Yes</h2>
