Just blurred out the gitignore

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam, incidunt.</h4>
         <h5>Learning Git is a lifestyle. </h5>
         <h3> Git ignore works now  </h3>
-
+        <h4> Just blurred out the gitignore </h4>
         <h1>Hoorah</h1>
         <h2>Yes</h2>
         <h3>This is dummy text </h3>
