Just made the relevant changes

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
             Veniam autem alias ipsam officia earum incidunt?</h4>
             <h5> Just did reverting now it's merging on the feature and dev branch! </h5>
-            <h1>Testing if it works </h1>
+            <span>Testing if it works </span>
 
             <h4> A live website Yes with github </h4>
             <button> My Button </button>
